--- a/src/web/js/templates/incashment.ejs
+++ b/src/web/js/templates/incashment.ejs
@@ -48,16 +48,17 @@
        </tbody>
     </table>
     <br>
-    <div style="font-size: 16px; font-weight: bolder; color: #2B547E" id="group_filter">Фильтр по группе:
+    <div style="font-size: 16px; font-weight: bolder; color: #2B547E; margin-bottom: -20px;" id="group_filter">Фильтр по группе:
         <select id="groups_incas"><option value="0">Все терминалы</option>
             <% groups.forEach(function(group){ %>
             <option value="<%= group['id_group'] %>" <% if(group['id_group'] == current_group){ %>selected<% } %>><%= group['group_name'] %></option>
             <% }); %>
         </select>
     </div>
-    <div id="search_date"><form><span style="font-size: 16px; font-weight: bolder; color: #2B547E">&nbsp;&nbsp;По дате:</span><label>&nbsp;C </label><input class="datePicker" type="text" name="search_from" id="search_from"value="<% if(hasOwnProperty('start_date')){ %><%= directDateFormat(start_date) %><% } %>"/>
+    <div id="search_date" style="margin-bottom: -20px;"><form><span style="font-size: 16px; font-weight: bolder; color: #2B547E">&nbsp;&nbsp;По дате:</span><label>&nbsp;C </label><input class="datePicker" type="text" name="search_from" id="search_from"value="<% if(hasOwnProperty('start_date')){ %><%= directDateFormat(start_date) %><% } %>"/>
     <label> По </label><input class="datePicker" type="text" name="search_till" id="search_till" value="<% if(hasOwnProperty('end_date')){ %><%= directDateFormat(end_date) %><% } %>"/>
     <img src="images/search-icon.png" id="search_start"/></form></div>
+    <div style="position: relative; float: right; left: 50px; top: -3px;" class="dataTables_filter"><label>Поиск: <input id="modal_filter" aria-controls="example" type="text"></label></div>
    <div style="clear: both"></div>
 <table id="modal_bills" class="display">
             <thead>
