--- a/src/web/js/templates/terminal_schedule_add.ejs
+++ b/src/web/js/templates/terminal_schedule_add.ejs
@@ -23,7 +23,7 @@
         </tr>
         </tbody>
     </table>
-    <input type="hidden" id="default-id" value="0"/><input type="hidden" name="id_terminal" value="dataT[0]"/>
+    <input type="hidden" id="default-id" value="0"/><input type="hidden" name="id_terminal" value="<%= id_terminal %>"/>
     <input type="hidden" name="action" value="insertTermTimetable"/><input type="submit" class="buttons" id="save_timetable" value="Сохранить"/>
 </form>
 <script>
