--- a/src/templates/partials/_header.phtml
+++ b/src/templates/partials/_header.phtml
@@ -26,7 +26,7 @@
               <script src="js/plugins/grid.tbltogrid.js" type="text/javascript"></script>
               <script type="text/javascript" src="http://jreject.turnwheel.com/js/jquery.reject.min.js"></script>
               <script src="js/jquery.maskedinput.min.js" type="text/javascript"></script>
-
+              <script type="text/javascript" src="js/jquery.clipboard.js"></script>
               <script src="http://jquery.bassistance.de/validate/jquery.validate.js"></script>
               <script src="http://jquery.bassistance.de/validate/additional-methods.js"></script>
               <script type="text/javascript" src="js/profileActions.js"></script>
