--- a/src/web/js/templates/pay_detail_short.ejs
+++ b/src/web/js/templates/pay_detail_short.ejs
@@ -1,47 +1,44 @@
-<div id="text" class="pop_window">
-    <img class="btn_close" src="images/x_button.png" alt="Close">
+<div id="sub_text">
     <% if(hasOwnProperty('data')) { %>
     <h1>Детальная информация по платежу <%= data[0]['tid'] %></h1>
-     <br><br><br><br>
-    <table style="margin: 5px 5px 5px 20px; font-size: 13px; text-align: left">
+     <br>
+    <table style="margin: 3px 5px 3px 20px; font-size: 13px; text-align: left">
         <tr>
-            <td style="border: 1px solid #757f90; width: 40%; height: 40px; padding: 5px"><b># Транзакции:</b>&nbsp;&nbsp; <%= data[0]['tid'] %></td>
-            <td style="border: 1px solid #757f90; width: 40%; height: 40px; padding: 5px"><b>Дата платежа:</b>&nbsp;&nbsp; <%= data[0]['DatePay'] %></td>
+            <td style="border: 1px solid #757f90; width: 40%; height: 20px; padding: 3px"><b># Транзакции:</b>&nbsp;&nbsp; <%= data[0]['tid'] %></td>
+            <td style="border: 1px solid #757f90; width: 40%; height: 20px; padding: 3px"><b>Дата платежа:</b>&nbsp;&nbsp; <%= data[0]['DatePay'] %></td>
         </tr>
         <tr>
-            <td style="border: 1px solid #757f90; height: 40px; padding: 5px"><b>Посл. изменение:</b>&nbsp;&nbsp; <%= data[0]['DateLastChange'] %></td>
-            <td style="border: 1px solid #757f90; height: 40px; padding: 5px"><b>Номер счета:</b>&nbsp;&nbsp; <%= data[0]['ClientAccount'] %></td>
+            <td style="border: 1px solid #757f90; height: 20px; padding: 3px"><b>Посл. изменение:</b>&nbsp;&nbsp; <%= data[0]['DateLastChange'] %></td>
+            <td style="border: 1px solid #757f90; height: 20px; padding: 3px"><b>Номер счета:</b>&nbsp;&nbsp; <%= data[0]['ClientAccount'] %></td>
         </tr>
         <tr>
-            <td style="border: 1px solid #757f90; height: 40px; padding: 5px">
+            <td style="border: 1px solid #757f90; height: 20px; padding: 3px">
                 <table><tr>
                 <td><%= data[0]['summary_amount'] %> - <br><i>(Сумма платежа)</i></td><td><%= data[0]['amount_commission_provider'] %> = <br><i>(Комиссия)</i></td><td><%= data[0]['amount_provider'] %><br><i>(К зачислению)</i></td>
                 </tr></table>
             </td>
-            <td style="border: 1px solid #757f90; height: 40px; padding: 5px"><b>Статус платежа:</b>&nbsp;&nbsp; <%= data[0]['status_name'] %></td>
+            <td style="border: 1px solid #757f90; height: 20px; padding: 3px"><b>Статус платежа:</b>&nbsp;&nbsp; <%= data[0]['status_name'] %></td>
         </tr>
         <tr>
-            <td style="border: 1px solid #757f90; height: 40px; padding: 5px"><b>Поставщик:</b>&nbsp;&nbsp; <%= data[0]['ProviderName'] %></td>
-            <td style="border: 1px solid #757f90; height: 40px; padding: 5px"><b>ФИО:</b>&nbsp;&nbsp; <%= data[0]['ClientFIO'] %></td>
+            <td style="border: 1px solid #757f90; height: 20px; padding: 3px"><b>Поставщик:</b>&nbsp;&nbsp; <%= data[0]['ProviderName'] %></td>
+            <td style="border: 1px solid #757f90; height: 20px; padding: 3px"><b>ФИО:</b>&nbsp;&nbsp; <%= data[0]['ClientFIO'] %></td>
         </tr>
         <tr>
-            <td style="border: 1px solid #757f90; height: 40px; padding: 5px"><b>номер:</b>&nbsp;&nbsp; <%= data[0]['etid'] %></td>
-            <td style="border: 1px solid #757f90; height: 40px; padding: 5px"><b>состояние:</b>&nbsp;&nbsp; <%= data[0]['descript'] %></td>
+            <td style="border: 1px solid #757f90; height: 20px; padding: 3px"><b>номер:</b>&nbsp;&nbsp; <%= data[0]['etid'] %></td>
+            <td style="border: 1px solid #757f90; height: 20px; padding: 3px"><b>состояние:</b>&nbsp;&nbsp; <%= data[0]['descript'] %></td>
         </tr>
         <tr>
-            <td style="border: 1px solid #757f90; height: 40px; padding: 5px"><b>Адрес точки:</b>&nbsp;&nbsp; <%= data[0]['terminal_name'] %></td>
+            <td style="border: 1px solid #757f90; height: 20px; padding: 3px"><b>Адрес точки:</b>&nbsp;&nbsp; <%= data[0]['terminal_name'] %></td>
             <td></td>
         </tr>
-        <tr><td><button id="clipboard_copy"><b>скопировать в буфер обмена</b></button></td>
+        <tr><td></td>
             <td style="text-align: right"><a href="https://oplata.regplat.ru/webpay/paycheck.jsp?isprint=1&tid=<%= data[0]['tid'] %>&card_num=<%= data[0]['Card_number'] %>&type=4" title="Печать"><img src="images/print.png" alt="print"/></a></td>
         </tr>
     </table>
-    <br>
     <% } %>
     <% if(hasOwnProperty('state')){ %>
-    <br>
     <h3>Изменение состояний</h3>
-        <table id="modal_bills" class="display dataTable">
+        <table id="modal_bills" class="display dataTable" style="font-size: 0.9em">
             <thead>
             <tr>
                 <th>Дата изменения</th>
@@ -69,7 +66,7 @@
     <% if(hasOwnProperty('data')){ %>
     <br>
     <h3>Информация pd4</h3>
-        <table class="display">
+        <table class="display" style="font-size: 0.9em">
             <thead>
             <tr>
                 <th>Название</th><th>Значение</th><th>Описание</th>
@@ -88,14 +85,3 @@
     <% } %>
     <br>
 </div>
-<script>
-    $(document).ready(function () {
-        $("#clipboard_copy").click(function () {
-            $(this).clipboard({
-                path: 'js/ZeroClipboard.swf',
-                copy: function() {return $('#text').text()},
-                afterCopy: alert($('#text').text())
-            });
-        });
-    });
-</script>
