--- a/src/web/js/templates/edit_profile.ejs
+++ b/src/web/js/templates/edit_profile.ejs
@@ -25,7 +25,7 @@
 </div>
     <script>
         $(document).ready(function () {
-            alert('test')
+            //alert('test')
             $.validator.setDefaults({
                 debug: true,
                 success: "valid"
