--- a/src/web/js/templates/terminal_schedule_add.ejs
+++ b/src/web/js/templates/terminal_schedule_add.ejs
@@ -63,7 +63,7 @@
     	}
 
     function addTableRow() {
-        alert('test');
+        //alert('test');
         /* default-id — скрытый элемент формы, из которого берется id для первого создаваемого элемента */
         var id = document.getElementById("default-id").value;
         id++;
