--- a/src/templates/partials/_header.phtml
+++ b/src/templates/partials/_header.phtml
@@ -45,8 +45,8 @@
                        <h1>Мониторинг платежей</h1>
                    <?php endif ?>
                    </div>
-                   <div class="exit" id="profile"><a class="edit_profile" href="index.php?module=user&action=editProfile" title="Личный кабинет"><img width="30px" src="images/user-icon.png" alt="profile"/></a></div>
-                   <div class="exit" id="profile_text"><a class="edit_profile" href="index.php?module=user&action=editProfile" title="Личный кабинет">Личный кабинет</a></div>
+                   <div class="exit" id="profile"><a class="edit_profile" href="index.php?module=user&action=editProfile" title="Настройки"><img width="30px" src="images/user-icon.png" alt="profile"/></a></div>
+                   <div class="exit" id="profile_text"><a class="edit_profile" href="index.php?module=user&action=editProfile" title="Настройки">Настройки</a></div>
                    <div class="exit"><a href="index.php?action=logout" title="Выход"><img src="images/exit.png" alt="exit"/></a></div>
                    <div class="exit" id="exit_text"><a href="index.php?action=logout" title="Выход">Выход</a></div>
                    <div class="exit" id="refresh"><a href="#" title="Обновить"><img src="images/refresh.png" alt="refresh"/></a></div>
