--- a/src/templates/terminal/index.phtml
+++ b/src/templates/terminal/index.phtml
@@ -38,7 +38,7 @@
     <button class="buttons" id="dohod">Доход</button>
 </div>
 <div id="group_filter">Фильтр по группе:
-    <select id="groups">
+    <select id="groups" style="width:250px;">
         <option value="0">Все терминалы</option>
         <?php    $agent = 13;
         if (mssql_num_rows($group) > 0):
