--- a/src/web/js/templates/profits_information.ejs
+++ b/src/web/js/templates/profits_information.ejs
@@ -20,12 +20,12 @@
     <table id="modal_bills" class="display dataTable" style="float: left; width: 500px;">
         <thead>
         <tr>
-            <th>Дата изменения</th>
-            <th>предыдущее состояние</th>
-            <th>новое состояние</th>
-            <th>try state</th>
-            <th>код результата</th>
-            <th>Полученный текст</th>
+            <th>Дата</th>
+            <th>Старое состояние</th>
+            <th>Новое состояние</th>
+            <th>Хотел перейти в ...</th>
+            <th>Код ошибки</th>
+            <th>Описание ошибки</th>
         </tr>
         </thead>
         <tbody>
