--- a/src/web/js/templates/incashment.ejs
+++ b/src/web/js/templates/incashment.ejs
@@ -49,7 +49,7 @@
     </table>
     <br>
     <div style="font-size: 16px; font-weight: bolder; color: #2B547E; margin-bottom: -20px;" id="group_filter">Фильтр по группе:
-        <select id="groups_incas"><option value="0">Все терминалы</option>
+        <select id="groups_incas" style="width:250px;"><option value="0">Все терминалы</option>
             <% groups.forEach(function(group){ %>
             <option value="<%= group['id_group'] %>" <% if(group['id_group'] == current_group){ %>selected<% } %>><%= group['group_name'] %></option>
             <% }); %>
