fix shedule edit

--- a/src/templates/partials/_header.phtml
+++ b/src/templates/partials/_header.phtml
@@ -10,6 +10,7 @@
               <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.js"></script>
               <link rel="stylesheet" type="text/css" media="screen" href="css/redmond/jquery-ui-1.10.3.custom.css" />
               <link rel="stylesheet" type="text/css" media="screen" href="css/ui.jqgrid.css" />
+             <link rel="stylesheet" type="text/css" media="screen" href="css/jquery.ui.timepicker.css" />
               <script type="text/javascript" src="js/ejs_production.js"></script>
               <script type="text/javascript" src="http://yandex.st/json2/2011-10-19/json2.min.js"></script>
               <script type="text/javascript" src="js/utils.js"></script>
@@ -21,6 +22,8 @@
          <?php endif ?>
               <script src="js/jquery-1.9.1.js" type="text/javascript"></script>
               <script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
+              <script src="js/jquery.ui.timepicker.js" type="text/javascript"></script>
+              <script src="js/jquery.ui.datepicker-ru.js" type="text/javascript"></script>
               <script src="js/i18n/grid.locale-ru.js" type="text/javascript"></script>
               <script src="js/jquery.jqGrid.min.js" type="text/javascript"></script>
               <script src="js/plugins/grid.tbltogrid.js" type="text/javascript"></script>
