--- a/src/web/js/templates/add_table_row.ejs
+++ b/src/web/js/templates/add_table_row.ejs
@@ -7,5 +7,5 @@
    <td><label>Уведомлять, если платежей нет дольше:</label></td>
    <td><input type="text" class="from_till" id="time_input<%= id %>" name="max_time_from_pay<%= id %>"/> минут</td>
    <td><a href="#" class="delete_setting" onclick="deleteTableRow(<%= id %>)">-Удалить эту настройку</a><br/>
-       <a href="#" id="add_setting" onclick="addTableRow()">Добавить новую настройку</a></td>
+       <a href="#" class="add_setting" onclick="addTableRow()">Добавить новую настройку</a></td>
 </tr>
