--- a/src/web/js/templates/terminal_info.ejs
+++ b/src/web/js/templates/terminal_info.ejs
@@ -15,18 +15,17 @@
     </form></td></tr>
     <tr><td class="term_info_label" >Расписание уведомлений:</td>
         <td>
-             <% if(hasOwnProperty('rasp')) { %>
+            <% if(hasOwnProperty('rasp')) { %>
             <ul>
                 <% rasp.forEach(function(raw){ %>
                     <li>
                         Уведомлять С <%= raw[0] %> По <%= raw[1] %> об отсутсвии платежей более <%= raw[2] %> минут
-                        <img id="20" class="del_time" title="Удалить" alt="delete" src="images/red.png" />
+                        <img id="<%= raw[3] %>" class="del_time" title="Удалить" alt="delete" src="images/red.png" />
                     </li>
                 <% }); %>
             </ul>
             <% } else { %> Не установлены <% } %>
         </td>
-
     </tr>
     <tr><td class="term_info_label" >Задать расписание:</td>
         <td><a id="timetable_icon" href="#" title="Добавить рассписание">
