--- a/src/web/js/templates/incashment.ejs
+++ b/src/web/js/templates/incashment.ejs
@@ -55,8 +55,13 @@
             <% }); %>
         </select>
     </div>
-    <div id="search_date" style="margin-bottom: -20px;"><form><span style="font-size: 16px; font-weight: bolder; color: #2B547E">&nbsp;&nbsp;По дате:</span><label>&nbsp;C </label><input class="datePicker" type="text" name="search_from" id="search_from"value="<% if(hasOwnProperty('start_date')){ %><%= directDateFormat(start_date) %><% } %>"/>
-    <label> По </label><input class="datePicker" type="text" name="search_till" id="search_till" value="<% if(hasOwnProperty('end_date')){ %><%= directDateFormat(end_date) %><% } %>"/>
+    <div id="search_date" style="margin-bottom: -20px;">
+        <form>
+            <div style="font-size: 16px; font-weight: bolder; color: #2B547E; float: left; margin-left: 430px;">&nbsp;&nbsp;По дате:</div>
+            <label>&nbsp;C </label>
+            <input class="datePicker" type="text" name="search_from" id="search_from"value="<% if(hasOwnProperty('start_date')){ %><%= directDateFormat(start_date) %><% } %>"/>
+            <label> По </label>
+            <input class="datePicker" type="text" name="search_till" id="search_till" value="<% if(hasOwnProperty('end_date')){ %><%= directDateFormat(end_date) %><% } %>"/>
     <img src="images/search-icon.png" id="search_start"/></form></div>
     <div style="position: relative; left: 15px; top: 20px; width: 300px;" class="dataTables_filter"><label>Поиск:&nbsp;<input id="modal_filter" style="width: 200px;" aria-controls="example" type="text"></label></div>
    <div style="clear: both; height: 17px"></div>
